--- a/AsteroidsEntityFramework/CommonAsteroids/pom.xml
+++ b/AsteroidsEntityFramework/CommonAsteroids/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>CommonAsteroids</artifactId>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>dk.sdu.mmmi.cbse</groupId>
@@ -23,5 +24,6 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
 
 </project>
